# MachineLearning

./: .gitignore  ML_model.ipynb  ML_uberdata_analysis.ipynb  MLmode_taxi.ipynb  MLmodel.ipynb  README.md  pyproject.toml  uber_parking_mdoe.pkl  uber_parking_mdoel.pkl  uber_parking_model.pkl
ML_uber_prediction/: ML_uberdata_analysis.ipynb  Uber_dataanalysis_Linearregression.ipynb  uber_parking_model.pkl
ML_uberdata_prediction/: ML_GradientBoostingRegressor.ipynb  ML_GradientBoostingRegressor.pkl  ML_Linearregression.ipynb  ML_Linearregression.pkl  ML_Randomforest.ipynb  ML_Randomforest.pkl  ML_XGboost.ipynb  ML_xgboost.pkl
