[project]
name = "uber-projects"
version = "0.1.0"
description = "this project is predecting the price"
authors = [
    {name = "Nandhagopal"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel (>=7.1.0,<8.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
